# catlang

./: .gitignore  CMakeLists.txt  catlang.sln
catlang/: basic_types.h  catlang.vcxproj  catlang.vcxproj.filters  interpreter.cpp  interpreter.h  main.cpp  test.cat  util.h  variant.h
src/: basic_types.h  interpreter.cpp  interpreter.h  main.cpp  util.cpp  variant.h
